// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Notification/ > Show error notification 1`] = `
<Styled(MuiBox)
  className="makeStyles-notificationBar-2"
>
  <WithStyles(ForwardRef(Alert))
    itemID="notification"
    severity="error"
    variant="filled"
  >
    INFO MESSAGE
  </WithStyles(ForwardRef(Alert))>
</Styled(MuiBox)>
`;

exports[`<Notification/ > Show info notification 1`] = `
<Styled(MuiBox)
  className="makeStyles-notificationBar-2"
>
  <WithStyles(ForwardRef(Alert))
    itemID="notification"
    severity="info"
    variant="filled"
  >
    INFO MESSAGE
  </WithStyles(ForwardRef(Alert))>
</Styled(MuiBox)>
`;

exports[`<Notification/ > Show notification with collapse 1`] = `
<Styled(MuiBox)
  className="makeStyles-notificationBar-2"
>
  <WithStyles(ForwardRef(Collapse))>
    <WithStyles(ForwardRef(Alert))
      action={
        <WithStyles(ForwardRef(IconButton))
          aria-label="close"
          color="inherit"
          onClick={[Function]}
          size="small"
        >
          <Memo
            fontSize="inherit"
          />
        </WithStyles(ForwardRef(IconButton))>
      }
      severity="success"
      variant="filled"
    >
      INFO MESSAGE
    </WithStyles(ForwardRef(Alert))>
  </WithStyles(ForwardRef(Collapse))>
</Styled(MuiBox)>
`;

exports[`<Notification/ > Show success notification 1`] = `
<Styled(MuiBox)
  className="makeStyles-notificationBar-2"
>
  <WithStyles(ForwardRef(Alert))
    itemID="notification"
    severity="success"
    variant="filled"
  >
    INFO MESSAGE
  </WithStyles(ForwardRef(Alert))>
</Styled(MuiBox)>
`;

exports[`<Notification/ > Show warning notification 1`] = `
<Styled(MuiBox)
  className="makeStyles-notificationBar-2"
>
  <WithStyles(ForwardRef(Alert))
    itemID="notification"
    severity="warning"
    variant="filled"
  >
    INFO MESSAGE
  </WithStyles(ForwardRef(Alert))>
</Styled(MuiBox)>
`;
